<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_account">
        <Preference
            app:key="email"
            app:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_parking">
        <ListPreference
            app:key="product"
            app:title="@string/product"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat
            app:key="default_product"
            app:title="@string/set_default_product"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_reminders">
        <ListPreference
            app:key="reminder"
            app:title="@string/settings_reminders"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_notifications">
        <Preference
            app:key="notifications"
            app:title="@string/settings_notifications"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_appearance">
        <ListPreference
            app:key="theme"
            app:title="@string/settings_theme"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat
            app:key="expressive"
            app:title="@string/settings_expressive"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_language">
        <ListPreference
            app:key="language"
            app:title="@string/settings_language"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about">
        <Preference
            app:key="disclaimer"
            app:title="@string/settings_disclaimer"
            app:selectable="false"/>
        <Preference
            app:key="version"
            app:title="@string/settings_version"
            app:selectable="false"/>
        <Preference
            app:key="github"
            app:title="@string/settings_github"/>
        <Preference
            app:key="logout"
            app:title="@string/menu_logout"/>
    </PreferenceCategory>
</PreferenceScreen>
