<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_park"
        android:icon="@drawable/ic_car"
        android:title="@string/nav_park"/>
    <item
        android:id="@+id/nav_planned"
        android:icon="@drawable/ic_nav_planned"
        android:title="@string/nav_planned"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history"/>
    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_nav_transactions"
        android:title="@string/nav_transactions"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings"/>
</menu>
